Fix drag overlay on mobile issues and hover on mobile

--- a/src/utils/css/components/back-to-top.scss
+++ b/src/utils/css/components/back-to-top.scss
@@ -18,8 +18,10 @@
   z-index: 4;
 }
 
-.back-to-top-btn:hover {
-  background-color: $color-brand;
+@media (hover: hover) {
+  .back-to-top-btn:hover {
+    background-color: $color-brand;
+  }
 }
 
 @media(max-width: $bp-tablet) {
