--- a/src/utils/css/components/burger.scss
+++ b/src/utils/css/components/burger.scss
@@ -15,9 +15,11 @@ $total: 3;
 	cursor: pointer;
 	z-index: 10;
 
-	&:hover {
-		.menu-toggler-line {
-			background: $color-brand-dark;
+	@media (hover: hover) {
+		&:hover {
+			.menu-toggler-line {
+				background: $color-brand-dark;
+			}
 		}
 	}
 }
