--- a/src/utils/css/components/hero.scss
+++ b/src/utils/css/components/hero.scss
@@ -52,8 +52,10 @@
       transition: $common-transition;
       width: fit-content;
 
-      &:hover {
-        background-color: $color-brand-dark;
+      @media (hover: hover) {
+        &:hover {
+          background-color: $color-brand-dark;
+        }
       }
 
       .fa-calendar {
