--- a/src/utils/css/screen.scss
+++ b/src/utils/css/screen.scss
@@ -74,7 +74,7 @@ img {
 .overlay {
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   left: 0;
   top: 0;
   z-index: 9;
